--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -62,7 +63,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
-    "pactum": "^3.1.3",
+    "pactum": "^3.4.0",
     "prettier": "^2.3.2",
     "prisma": "^3.15.2",
     "source-map-support": "^0.5.20",
